--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,9 @@
 $font-family: 'Permanent Marker', cursive;
+$monospace-font: 'Roboto Mono', monospace;
 
 body {
   font-family: $font-family;
+  width: 723px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -11,21 +13,75 @@ h1 {
   margin-block-start: 2em;
 }
 
-.image-button, .rps-icon {
+.game-id {
+  margin: 0.5em 0 1em;
+}
+
+.game-id b {
+  font-family: $monospace-font;
+}
+
+.join-modal {
+  margin-bottom: 1em;
+}
+
+.input-error {
+  color: red;
+}
+
+button {
+  font-family: $font-family;
+}
+
+.image-button {
   width: 200px;
   max-width: 30%;
 }
 
-.image-button .rps-icon {
+.button-image-icon {
+  cursor: pointer;
+}
+
+.button-image-icon:hover {
+
+}
+
+.rps-icon {
   max-width: 100%;
 }
 
 .rps-countdown {
-  font-size: 8em;
+  font-size: 5em;
 }
 
 .game-result {
+  width: 100%;
   display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+
+.person-result {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 200px;
+  max-width: 63%;
+}
+
+.person-choice {
+  margin: 1px 6px;
+  align-self: center;
+}
+
+.player-result {
+  font-size: 4em;
+}
+
+.scores {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  height: 4em;
 }
 
 .player-score {
@@ -34,24 +90,6 @@ h1 {
 
 .opponent-score {
   float: right;
-}
-
-@media only screen and (min-width: 1200px) {
-  body {
-    width: 1127px;
-  }
-}
-
-@media only screen and (min-width: 992px) and (max-width:1199.98px) {
-  body {
-    width: 933px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width:991.98px) {
-  body {
-    width: 723px;
-  }
 }
 
 @media only screen and (max-width: 767.98px) {
@@ -63,5 +101,9 @@ h1 {
 
   h1 {
     margin-block-start: 0.67em;
+  }
+
+  .rps-countdown {
+    font-size: 3em;
   }
 }
