--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,12 +42,17 @@ button {
   cursor: pointer;
 }
 
+.button-image-icon.disabled {
+  cursor: not-allowed;
+}
+
 .button-image-icon:hover {
 
 }
 
 .rps-icon {
   max-width: 100%;
+  max-height: 10vh;
 }
 
 .rps-countdown {
