--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,29 +25,61 @@ h1 {
   margin-bottom: 1em;
 }
 
+.join-modal button {
+  font-size: 0.9em;
+}
+
 .input-error {
   color: red;
 }
 
 button {
   font-family: $font-family;
+  font-size: 1.2em;
+  border-radius: 0.5em;
 }
 
 .image-button {
-  width: 200px;
+  position: relative;
+  text-align: center;
+  background: #fff;
+  border-radius: 20px;
+  transition: .5s;
+  margin: 0 0.2em;
   max-width: 30%;
-}
-
-.button-image-icon {
   cursor: pointer;
 }
 
-.button-image-icon.disabled {
-  cursor: not-allowed;
+.image-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background: #ffee10;
+  transition: .5s;
+  transform: scale(0);
+  z-index: -1;
 }
 
-.button-image-icon:hover {
+.image-button:not(.disabled):hover::before {
+  transform: scale(1.1);
+  box-shadow: 0 0 15px #ffee10;
+}
 
+.image-button:not(.disabled):hover {
+  color: #ffee10;
+  box-shadow: 0 0 5px #ffee10;
+  text-shadow: 0 0 5px #ffee10;
+}
+
+.image-button.disabled {
+  cursor: not-allowed;
+  background-color: #ffffff;
+  opacity: 1;
+  background: repeating-linear-gradient( -45deg, #000000, #000000 3px, #ffffff 3px, #ffffff 15px );
 }
 
 .rps-icon {
@@ -87,6 +119,10 @@ button {
   margin-top: 1em;
   margin-bottom: 1em;
   height: 4em;
+}
+
+.ready-button {
+  margin-top: 1em;
 }
 
 .player-score {
